--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 }
 
 body {
-background-color: #ecebead7;
+background-color: #111111;
   display: flex;
   justify-content: center;
   align-items: center;
